bounty html,css and images added

--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>hampasin kita ng egg</title>
+    <title>One Piece</title>
 </head>
-<body>
+<body class="home">
     <div class="container">
         <div class="box">
             <img src="images/logo.png">
-            <h1>One Piece</h1>
+            <h1>One Piece is Real</h1>
             <video src="images/vid.mp4" autoplay></video> 
-            <h1>is Real</h1>
         </div>
     </div>
-</div>
+
+    <div class="about">
+        <h1>One Piece</h1>
+        <p>One Piece is a Japanese manga series written and illustrated by Eiichiro Oda. The story follows the adventures of Monkey D. Luffy and his crew, the Straw Hat Pirates, where he explores the Grand Line in search of the mythical treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
+        <a href="bounty.html" target="_blank"><button>Bounties</button></a>
+
+    </div>
 </body>
 </html>
