--- a/bounty.html
+++ b/bounty.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="bounty-container">
+    <a href="index.html">Go back<a>
         <h1>Strawhat Bounties</h1>
         <div class="line"></div>
         <div class="image-container">
