added new file, and modified index and bounty html file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One Piece World</title>
     <link rel="stylesheet" href="style.css">
-    <title>One Piece</title>
 </head>
 <body>
     <div class="main">
@@ -23,12 +24,9 @@
                 <a href="https://twitter.com/kukaaass" target="_blank"><img src="images/twithome.png"></a>
             </div>
         </div>
-
-    <div class="about">
-        <h1>One Piece</h1>
-        <p>One Piece is a Japanese manga series written and illustrated by Eiichiro Oda. The story follows the adventures of Monkey D. Luffy and his crew, the Straw Hat Pirates, where he explores the Grand Line in search of the mythical treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
-        <a href="bounty.html" target="_blank"><button>Bounties</button></a>
-
     </div>
+    <footer>
+        <p>Copyright © 2023 Kukaaasss <br> One Piece is Real. All rights reserved.</p>
+      </footer>
 </body>
 </html>
